--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,58 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>JKTV20jsWebLibrary</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/bootstrap.min(cerulean).css" rel="stylesheet"/>
+        <link rel="stylesheet" href="css/main.css"/>
     </head>
-    <body>
-        <div>TODO write content</div>
+    <body class="d-flex flex-column min-vh-100">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" id="home" href="#">JKTV20jsWebLibrary</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+
+                  <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto">
+                      <li class="nav-item" id="menu_new_author">
+                        <a class="nav-link" href="#">Новый автор
+                          <span class="visually-hidden">(current)</span>
+                        </a>
+                      </li>
+                      <li class="nav-item" id="menu_new_book">
+                        <a class="nav-link"  href="#">Новая книга</a>
+                      </li>
+                      <li class="nav-item" id="menu_buy_book">
+                        <a class="nav-link" href="#">Купить</a>
+                      </li>
+                      <li class="nav-item" id="menu_profile">
+                        <a class="nav-link" href="#">Профайл</a>
+                      </li>
+                      <li class="nav-item" id="menu_admin_panel">
+                        <a class="nav-link" href="#">Панель администратора</a>
+                      </li>
+                    </ul>
+                    <form class="d-flex">
+                      <input class="form-control me-sm-2" type="text" placeholder="Search">
+                      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+            </nav>
+            <p class="text-success w-100 d-flex justify-content-center"></p>
+        </header>
+        <main class="container-fluid flex-grow-1">
+            <div id="content" class="d-flex justify-content-center">
+            </div>
+        </main>
+        <footer class="footer w-100 text-center bg-primary mt-auto text-white" style="min-height: 30px">
+            IVKHK 2022
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script type="module" src="js/App.js"></script>
     </body>
 </html>
